--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -28,7 +28,7 @@
 					<textarea data-template>
 							### E-Security 1 - Vorstellung
 							#### Wintersemester 2017/2018
-							FH Joanneum
+							FH JOANNEUM
 						</textarea>
 				</section>
 
