--- a/02_terminologie/index.html
+++ b/02_terminologie/index.html
@@ -28,7 +28,7 @@
 					<textarea data-template>
 							### E-Security 1 - Terminologie
 							#### Wintersemester 2017/2018
-							FH Joanneum
+							FH JOANNEUM
 						</textarea>
 				</section>
 
@@ -152,7 +152,7 @@
 					<textarea data-template>
 							### E-Security 1 - Terminologie
 							#### Wintersemester 2017/2018
-							FH Joanneum
+							FH JOANNEUM
 						</textarea>
 				</section>
 
