--- a/03_sicherheitsmanagement/index.html
+++ b/03_sicherheitsmanagement/index.html
@@ -28,13 +28,22 @@
 					<textarea data-template>
 							### E-Security 1 - Sicherheitsmanagement
 							#### Wintersemester 2017/2018
-							FH Joanneum
+							FH JOANNEUM
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Schützenswerte Informationen im Unternehmen
+							### Entwicklung
+							- "Pre - IT"
+							- Notwendigkeit aus tragischen Ereignissen der Industriegeschichte
+							- Erkenntnis: Prozesse zur Dokumentation von Risiken und Maßnahmen zur Lösung/Minimierung
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schützenswerte Informationen ("Assets") im Unternehmen
 							- Software
 							- Hardware
 							- Know-How
@@ -58,13 +67,14 @@
 							### Wikipedia sagt ...
 							- "Das Sicherheitsmanagement führt, lenkt und koordiniert eine Organisation in Bezug auf alle Sicherheitsaktivitäten"
 							- "Sicherheitsmanagement ist synonym zu Risikomanagement (RM)"
+							- "Er beschreibt einen fortlaufenden Prozess innerhalb einer Unternehmung oder Organisation zur Gewährleistung der IT-Sicherheit"
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Sicherheitsmanagement im Unternehmen
-							- nicht eine Person
+							- nicht eine Person bzw. Ämter in Personalunion
 							- Unterschiedliche Abteilungen mit unterschiedlichen Zuständigkeiten
 						</textarea>
 				</section>
@@ -72,7 +82,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							- Management / "Board of Directors"
-							  - Gesamtverantwortlichkeit, Management Summary, Security Briefing
+							  - Gesamtverantwortlichkeit, bekommt "Management Summary" und Security Briefing
 							- General Management
 							  - "Head of", Abteilungsleiter, ...
 							  - CEO, CIO, ...
@@ -88,7 +98,7 @@
 							- Chief information security officer (CISO)
 								- Policy Erstellung, Schulungen, Incident Management, nicht nur technisches sondern auch Geschäfts-Know-How
 							- Business unit (information) security officer (BSO/BISO)
-							  - Security in der Abteilung (z.B. Code Review)
+							  - Security in der Abteilung (z.B. Code Review, Einhaltung von Coding Standards)
 						</textarea>
 				</section>
 
@@ -106,8 +116,8 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Abteilungen innnerhalb des Unternehmens
-							- Idealerweise Trennung von Aufgaben und Verantwortungen
-							- Welche Abteilung berichtet an welche Abeiltung/Position (weisungsgebunden)
+							- Trennung von Aufgaben und Verantwortungen
+							- Welche Abteilung berichtet an welche Abeiltung/Position (Weisungsgebunden!)
 							- Besetzung oft Abhängig von Unternehmensgröße
 						</textarea>
 				</section>
@@ -121,8 +131,9 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Wer arbeitet wo?
-						</textarea>
+							### Kontakt im Praktikum?
+							- Personen/Abteilungen oder "Auswirkungen" von Sicherheitsmanagement?
+					</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
@@ -153,6 +164,30 @@
 							- Beschreibt meist grundsätzlichen Umgang mit IT-Equipment
 							- Unterschrift am ersten Arbeitstag
 							- Nicht übertreiben (z.B.: Passwort Policy) => höheres Risiko
+							- Beispiel: "Usage of IT Equipment"
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Usage of IT Equipment"
+							- Scope? Alle Mitarbeiter
+							- Geltungsbereich? Hardware, Storage und Kommunikation
+							- Rechte und Pflichten? Hausverstand!
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Usage of IT Equipment" - Aspekte
+							- Private Verwendung von IT Equipment (Social Media?)
+							- Regelung bei Entlassung/Kündigung (E-Mail, Files, ...)
+							- Installation von Software
+							- Privategespräche am Firmen-Handy
+							- Verbot von Streaming Diensten
+							- Abspeichern von privaten Files (Verbot von USB Sticks, ...)
+							- Monitoring von Internet-Access
+							- Konsequenzen bei "nicht beachten"
 						</textarea>
 				</section>
 
@@ -161,6 +196,7 @@
 							### Abteilungsspezifische Policies
 							- Admins haben andere Policies als Mitarbeiter im Sales
 							- Immer als Zusatz zur generellen Policy
+							- Notwendigkeit von speziellen Schulungen/Trainings (z.B.: OWASP)
 						</textarea>
 				</section>
 
@@ -232,8 +268,99 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Awareness Training @ Wirecard
-							- Screenshots
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/1.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/2.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/4.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/5.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/6.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/7.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/10.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/11.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/13.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/14.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/15.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/18.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/19.PNG" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Awareness Training @ Wirecard
+							<img src="images/03_sicherheitsmanagement/awareness_training/21.PNG" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
@@ -241,7 +368,7 @@
 					<textarea data-template>
 							### E-Security 1 - Sicherheitsmanagement
 							#### Wintersemester 2017/2018
-							FH Joanneum
+							FH JOANNEUM
 						</textarea>
 				</section>
 
@@ -249,7 +376,7 @@
 					<textarea data-template>
 							### Quellenverzeichnis
 							- E-Security Unterlagen - Prof.(FH) DI Ewald Graif
-							- Wikipedia: https://de.wikipedia.org/wiki/Sicherheitsmanagement
+							- Wikipedia: https://de.wikipedia.org/wiki/Sicherheitsmanagement ; https://de.wikipedia.org/wiki/IT-Sicherheitsmanagement
 							- Weiterführende Informationen: https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
