--- a/03_sicherheitsmanagement/index.html
+++ b/03_sicherheitsmanagement/index.html
@@ -44,7 +44,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Rechtlichte Vorgaben
-							- Letzverantwortlichkeit immer bei der Unternehmensleitung ("Geschäftsführerhaftung")
+							- Letztverantwortlichkeit immer bei der Unternehmensleitung ("Geschäftsführerhaftung")
 							- Datenschutzgesetz (Ersatz durch EU Verordnung im Mai 2018)
 							- "Data Breach Notification Duty"
 							- Verbandsverantwortlichkeitsgesetz (VBVG)
@@ -69,7 +69,7 @@
 					<textarea data-template>
 							### Sicherheitsmanagement ...
 							- ... Unterstützt das Unternehmen in allen Bereichen des Alltages
-							- ... Unterstützt beim Erreichen des "Business Zweck"
+							- ... Unterstützt beim Erreichen des "Business Zwecks"
 							### Treffen von Entscheidungen ...
 							- ... "Duty of loyalty"
 							- ... "Duty of care" (Sorgfaltspflicht)
@@ -130,8 +130,8 @@
 					<textarea data-template>
 							### Abteilungen innnerhalb des Unternehmens
 							- Trennung von Aufgaben und Verantwortungen
-							- Welche Abteilung berichtet an welche Abeiltung/Position (Weisungsgebunden!)
-							- Besetzung oft Abhängig von Unternehmensgröße
+							- Welche Abteilung berichtet an welche Abteilung/Position (Weisungsgebunden!)
+							- Besetzung oft abhängig von Unternehmensgröße
 						</textarea>
 				</section>
 
@@ -258,7 +258,7 @@
 							### physikalische Sicherheit
 							- Datenvernichtung: Wie lange müssen Daten aufbehalten werden? Sicher vernichten?
 							- Zutrittskontrolle: Mitarbeiterausweise, Vereinzelungsanlagen
-							- Klimaanlage: Abschaltung welcher Systeme zuerste?
+							- Klimaanlage: Abschaltung welcher Systeme zuerst?
 							- Videoüberwachung: DSG: wie lange wird gespeichert? Audio?
 							- Empfang: Anmelden von Besuchern
 							- Schlüsselverwaltung: Wer hat Zugang zum Firmensafe?
