--- a/05_pci/index.html
+++ b/05_pci/index.html
@@ -34,8 +34,28 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### ...
-							- tbd
+							### Übersicht und Geschichte
+							- Payment Card Industry - Data Security Standard
+							- Gegründet 2006 von American Express, Discover, JCB International, MasterCard und Visa
+							- Vorstand und "Advisory Board"
+							- Unregelmäßige Updates/Erweiterungen (derzeit Version 3.2 aus April 2016)
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Übersicht und Geschichte
+							- Breites Spektrum an Guidelines für "Kreditkarten Branche"
+							- Jährliches OnSite-Audit
+							- kontinuierlicher Prozess über das ganze Jahr
+							  - Security Scans, Trainings, Reports, ...
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### PCI DSS
+							<img src="images/05_pci/overview.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
@@ -44,6 +64,13 @@
 							### E-Security 1 - PCI DSS
 							#### Wintersemester 2017/2018
 							FH JOANNEUM
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Quellenverzeichnis
+							- PCI DSS: https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2.pdf
 						</textarea>
 				</section>
 
