--- a/05_pci/index.html
+++ b/05_pci/index.html
@@ -34,21 +34,48 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Übersicht und Geschichte
-							- Payment Card Industry - Data Security Standard
-							- Gegründet 2006 von American Express, Discover, JCB International, MasterCard und Visa
-							- Vorstand und "Advisory Board"
-							- Unregelmäßige Updates/Erweiterungen (derzeit Version 3.2 aus April 2016)
+							### Motivation und Geschichte (1)
+							- Anfang 2000er: starker Anstieg bei Kreditkaren Betrug im Internet
+							- 2001: Visa stellt ersten Standard vor; allerdings wenig Akzeptanz und Umsetzung
+							- Ende 2004: PCI DSS 1.0 - Erster gemeinsamer Standard
+							- Ende 2006: Gründung "PCI Security Standards Council" aller Top-Player und PCI DSS 1.1
+							<aside class="notes">Top Player: American Express, Discover, JCB International, MasterCard und Visa; neu in 1.1: Firewall notwendig und professioneller Review des Source Codes</aside>
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Übersicht und Geschichte
+							### Motivation und Geschichte (2)
+							- Eigener Vorstand und "Advisory Board" mit Top-Playern aus "Online Business"
+							- Unregelmäßige Updates/Erweiterungen (derzeit Version 3.2 aus April 2016)
+							- vor 2010 Akzeptanz von PCI DSS eher unterdurschschnittlich (technische Vorgaben, Audits, ...)
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Motivation und Geschichte (3)
 							- Breites Spektrum an Guidelines für "Kreditkarten Branche"
 							- Jährliches OnSite-Audit
-							- kontinuierlicher Prozess über das ganze Jahr
+							- mittlerweile kontinuierlicher Prozess über das ganze Jahr
 							  - Security Scans, Trainings, Reports, ...
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Spektrum an Standards
+							- PCI PTS (Pin Transaction Security): Hersteller von Terminals
+							- PCI PA-DSS (Payment Application Vendors): Software Hersteller
+							- PCI P2PE (Point-to-Point Encryption): Spezialisert auf Datenübertragung
+							- <strong>PCI DSS (Data Security Standard): speichern/verarbeiten/übertragen</strong>
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Die Kreditkarte
+							<img src="images/05_pci/CardAnatomy.jpg" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
