--- a/05_pci/index.html
+++ b/05_pci/index.html
@@ -81,8 +81,68 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
+							### Was darf gespeichert werden
+							<img src="images/05_pci/store.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Merchant Level
+							- Verschiedene Kategorien und Vorgaben seitens Visa
+							- Level 1 = > 6Millionen TX pro Jahr: Vierteljährliche Security Scans und OnSite Audit
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
 							### PCI DSS
 							<img src="images/05_pci/overview.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Req 1: Install and maintain a firewall configuration to protect cardholder data
+							- Netzwerksegmentierung durch Firewalls (Zonenkonzept)
+							- Prozess zur Freigabe/Review von neuen Firewall-Rules
+							- Up to date Netzwerkdiagramm (Changelog!)
+							- Datenfluss einzeichnen
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Req 1: Install and maintain a firewall configuration to protect cardholder data
+							- Theorie und Praxis (Vergleich FW Rule review mit Wirklichkeit)
+							- "Business justification" für schwache Protokolle
+							- Aufzeichnung aller verwendeten (unsicheren) Ports und Protokolle
+							- FW Review alle 6 Monate
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Req 1: Install and maintain a firewall configuration to protect cardholder data
+							- Beschränkungen für ein/ausgehenden Traffic ("Deny all")
+							- Zugriff aus dem Internet nur in dedizierte Zone
+							- Anti Spoofing und "established" connections
+							- Beschränkung ausgehender Traffic
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							#### Req 1: Install and maintain a firewall configuration to protect cardholder data
+							- aktive (Windows) Firewall - kann nicht deaktiviert werden
+							
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### PCI Song
+						https://www.youtube.com/watch?v=xpfCr4By71U
 						</textarea>
 				</section>
 
@@ -97,7 +157,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Quellenverzeichnis
-							- PCI DSS: https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2.pdf
+							- PCI DSS 3.2: https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2.pdf
 						</textarea>
 				</section>
 
