--- a/04_sicherheitsmanagement_ue/index.html
+++ b/04_sicherheitsmanagement_ue/index.html
@@ -34,8 +34,24 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### ...
-							- tbd
+							### Gruppenarbeit (2er oder 3er Teams)
+							- Erstellen einer Generellen-, Abteilungs- ODER Ablauf-Policy
+							- Erstellen eines "Awareness Training" (Präsentation)
+							- Vorbereitungszeit: 45 Minuten
+							- Anschließend: "Awareness Training für ihre Mitarbeiter" (Dauer ca. 5 Minuten)
+							- Abschluss: kurze Diskussion und Feedback aus der Gruppe
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Spielregeln
+							- Format/Layout frei wählen aber angemessen
+							- "Wunsch-Firma" in IT-Branche
+							- Keine Policies (-Teile) kopieren/abschreiben
+							- Selbstorganisation - keine zwei thematisch gleichen Policies
+							- Abgabe Präsentation und Policy als PDF (Namen aller Personen im Team nicht vergessen) via E-Mail am 29.11.2017
+							- Vorwissen für Präsentation: Technisch versiert aber kein Detail-Wissen über Thematik
 						</textarea>
 				</section>
 
